@@ -1,7 +1,7 @@
 package com.essers.wmsscanner.generator;
 
 import com.essers.wmsscanner.entity.*;
-import com.essers.wmsscanner.repo.*;
+import com.essers.wmsscanner.repository.*;
 import com.vaadin.exampledata.DataType;
 import com.vaadin.exampledata.ExampleDataGenerator;
 import com.vaadin.flow.spring.annotation.SpringComponent;
@@ -12,151 +12,121 @@ import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
-
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @SpringComponent
 public class DataGenerator {
-   @Autowired
-    private PasswordEncoder encoder;
+    @Autowired
+    private PasswordEncoder passwordEncoder;
+    @Autowired
+    private UserRepository userRepository;
+    @Autowired
+    private RoleRepository roleRepository;
+
+    private final Random random = new Random();
+
 
     @Bean
-    public CommandLineRunner loadData(MovementRepo movementRepo, PickinglistRepo pickinglistRepo,
-                                      StockRepo stockRepo, UserRepository userRepository,
-                                      RoleRepo roleRepo, ProductRepo productRepo, CompanyRepo companyRepo,
-                                      WarehouseRepo warehouseRepo, SiteRepo siteRepo, SupplierRepo supplierRepo) {
+    public CommandLineRunner loadData(MovementRepository movementRepository, PickinglistRepository pickinglistRepository, StockRepository stockRepository, ProductRepository productRepository, CompanyRepository companyRepository, WarehouseRepository warehouseRepository, SiteRepository siteRepository) {
         return args -> {
             Logger logger = LoggerFactory.getLogger(getClass());
-            if (pickinglistRepo.count() != 0L) {
-                logger.info("Using existing database");
-                return;
-            }
             int seed = 123;
             logger.info("Generating demo data");
 
-            List<Role> roles=new ArrayList<>();
+            List<Role> roles = new ArrayList<>();
             Role role = new Role();
             role.setName("Admin");
             Role role1 = new Role();
             role.setName("User");
             roles.add(role);
             roles.add(role1);
-            roleRepo.saveAll(roles);
-            User user=new User();
+            roleRepository.saveAll(roles);
+            User user = new User();
             user.setUserName("eki");
-            user.setPassword(encoder.encode("user"));
+            user.setPassword(passwordEncoder.encode("user"));
             user.setRoles(roles);
             userRepository.save(user);
+            User user2 = new User();
+            user.setUserName("mijenk");
+            user.setPassword(passwordEncoder.encode("user"));
+            user.setRoles(roles);
+            userRepository.save(user2);
+            ExampleDataGenerator<Product> productExampleDataGenerator = new ExampleDataGenerator<>(Product.class, LocalDateTime.now());
+            productExampleDataGenerator.setData(Product::setProductId, DataType.EAN13);
+            productExampleDataGenerator.setData(Product::setName, DataType.WORD);
+            productExampleDataGenerator.setData(Product::setLocation, DataType.WORD);
+            productExampleDataGenerator.setData(Product::setDescription, DataType.SENTENCE);
+            List<Product> products = productRepository.saveAll(productExampleDataGenerator.create(100, seed));
 
-            User u=userRepository.getById(user.getId());
-            ExampleDataGenerator<Product> productExampleDataGenerator = new ExampleDataGenerator<>(Product.class,
-                    LocalDateTime.now());
-            productExampleDataGenerator.setData(Product::setProduct_ID, DataType.EAN13);
-            productExampleDataGenerator.setData(Product::setName, DataType.TWO_WORDS);
-            productExampleDataGenerator.setData(Product::setLocation, DataType.TWO_WORDS);
-            List<Product>products=productRepo.saveAll(productExampleDataGenerator.create(100, seed));
-
-            ExampleDataGenerator<Company> companyExampleDataGenerator = new ExampleDataGenerator<>(Company.class,
-                    LocalDateTime.now());
+            ExampleDataGenerator<Company> companyExampleDataGenerator = new ExampleDataGenerator<>(Company.class, LocalDateTime.now());
             companyExampleDataGenerator.setData(Company::setName, DataType.COMPANY_NAME);
-            List<Company> companies=companyRepo.saveAll(companyExampleDataGenerator.create(50, seed));
+            List<Company> companies = companyRepository.saveAll(companyExampleDataGenerator.create(50, seed));
 
-            List<Warehouse> warehouses=warehouseRepo.saveAll(Stream.of("WH10", "WH11","WH12")
-                    .map(Warehouse::new).collect(Collectors.toList()));
+            List<Warehouse> warehouses = warehouseRepository.saveAll(Stream.of("WH10", "WH11", "WH12").map(Warehouse::new).toList());
 
-            List<Site> sites= siteRepo.saveAll(Stream.of("Winterslag", "Genk").map(Site::new).collect(Collectors.toList()));
+            List<Site> sites = siteRepository.saveAll(Stream.of("Winterslag", "Genk").map(Site::new).toList());
 
-            ExampleDataGenerator<Supplier> supplierExampleDataGenerator = new ExampleDataGenerator<>(Supplier.class,
-                    LocalDateTime.now());
+            ExampleDataGenerator<Supplier> supplierExampleDataGenerator = new ExampleDataGenerator<>(Supplier.class, LocalDateTime.now());
             supplierExampleDataGenerator.setData(Supplier::setName, DataType.WORD);
-            List<Supplier> suppliers=supplierRepo.saveAll(supplierExampleDataGenerator.create(50,seed));
-
-            ExampleDataGenerator<Pickinglist> pickinglistGenerator = new ExampleDataGenerator<>(Pickinglist.class,
-                    LocalDateTime.now());
-            pickinglistGenerator.setData(Pickinglist::setLocation, DataType.ADDRESS );
-            pickinglistGenerator.setData(Pickinglist::setQuantity, DataType.NUMBER_UP_TO_10 );
-            pickinglistGenerator.setData(Pickinglist::setUom, DataType.WORD );
-            List<Pickinglist> pickinglists =pickinglistGenerator.create(40, seed).stream().map(plist -> {
-                plist.setProduct(new Random().ints(10, 0, products.size()).mapToObj(products::get).toList());
-                plist.setCompany(companies.get( new Random().nextInt(companyRepo.findAll().size())));
-                plist.setSite(sites.get(new Random().nextInt(siteRepo.findAll().size())));
-                plist.setWarehouse(warehouses.get(new Random().nextInt(warehouseRepo.findAll().size())));
+            ExampleDataGenerator<Pickinglist> pickinglistGenerator = new ExampleDataGenerator<>(Pickinglist.class, LocalDateTime.now());
+            pickinglistGenerator.setData(Pickinglist::setQuantity, DataType.NUMBER_UP_TO_10);
+            pickinglistGenerator.setData(Pickinglist::setUom, DataType.WORD);
+            List<Pickinglist> pickinglists = pickinglistGenerator.create(40, seed).stream().map(plist -> {
+                plist.setProduct(random.ints(9, 0, products.size()).mapToObj(products::get).toList());
+                plist.setCompany(companies.get(random.nextInt(companyRepository.findAll().size())));
+                plist.setWmsSite(sites.get(random.nextInt(siteRepository.findAll().size())));
+                plist.setWmsWarehouse(warehouses.get(random.nextInt(warehouseRepository.findAll().size())));
                 plist.setLocation("RETARUS123456789");
                 return plist;
-            }).collect(Collectors.toList());
+            }).toList();
 
-            pickinglistRepo.saveAll(pickinglists);
-            List<Stock> stocks=new ArrayList<>();
-            int i=0;
-            for (Pickinglist p:pickinglists
-                 ) {
-                Stock s=new Stock();
-
-                s.setLocation(p.getLocation());
-                s.setProductID(p.getProduct().get(i).getProduct_ID());
+            List<Movement> movements = new ArrayList<>();
+            List<Stock> stocks = new ArrayList<>();
+            for (int i=0; i<pickinglists.size(); i++ ) {
+                Stock s = new Stock();
+                Pickinglist pl=pickinglists.get(i);
+                s.setLocation(pl.getLocation());
                 s.setQuantity(2);
-                stocks.add(s);
-                if(i<9){
-                    i++;
-                }
-
-            }
-
-            stockRepo.saveAll(stocks);
-            List<Movement>movements=new ArrayList<>();
-            for (Pickinglist pl: pickinglists
-                 ) {
-
-                for (Product p:pl.getProduct()
-                     ) {
-
-                    Movement movement=new Movement();
-                    movement.setType(Movementtype.FP);
-                    movement.setProgresstimestamp(LocalDateTime.now());
-                    movement.setWarehouse(pl.getWarehouse().getName());
-                    movement.setSite(pl.getSite().getName());
-                    movement.setCompany(pl.getCompany().getName());
+                for (Product p : pl.getProduct()) {
+                    s.setProductId(p.getproductId());
+                    stocks.add(s);
+                    Movement movement = new Movement();
+                    movement.setMovementType(Movementtype.FP);
+                    movement.setInProgressTimestamp(LocalDateTime.now());
+                    movement.setWmsWarehouse(pl.getWmsWarehouse().getName());
+                    movement.setWmsSite(pl.getWmsSite().getName());
+                    movement.setWmsCompany(pl.getCompany().getName());
                     movement.setPickinglist(pl);
-                    movement.setLocationfrom(p.getLocation());
-                    movement.setLocationto(pl.getLocation());
+                    movement.setLocationFrom(p.getLocation());
+                    movement.setLocationTo(pl.getLocation());
                     movement.setLocation(pl.getLocation());
                     movement.setQuantity(pl.getQuantity());
                     movement.setUom(pl.getUom());
-                    movement.setCompany(pl.getCompany().getName());
-                    movement.setProductId(p.getProduct_ID());
-                    movement.setPalleteNummer("03600029145");
+                    movement.setWmsCompany(pl.getCompany().getName());
+                    movement.setProductId(p.getproductId());
                     movement.setState("pick");
+                    movement.setPalleteNummer("03600029145");
                     movements.add(movement);
                 }
                 pl.setMovements(movements);
             }
-            movementRepo.saveAll(movements);
 
-            for (Movement m:movements
-                 ) {
-                for (Stock s:stockRepo.findAll()
-                     ) {
-                    if(m.getProductId().equals(s.getProductID())){
+
+            for (Movement m : movements) {
+                for (Stock s : stockRepository.findAll()) {
+                    if (m.getProductId().equals(s.getProductId())) {
                         m.getStock().add(s);
                     }
-                   movementRepo.save(m);
+                    movementRepository.save(m);
                 }
             }
-
-            logger.info("... generating " + productRepo.findAll().size() + " products in entities...");
-            logger.info("... generating " + movementRepo.findAll().size() + " movements in entities...");
-            logger.info("... generating " + pickinglistRepo.findAll().size() + " pickinglist in entities...");
-            logger.info("... generating " + stockRepo.findAll().size() + " stocklist in entities...");
-            logger.info("... generating " + companyRepo.findAll().size() + " companies in entities...");
-            logger.info("... generating " + warehouseRepo.findAll().size() + " warehouse in entities...");
-            logger.info("... generating " + siteRepo.findAll().size() + " site in entities...");
-            logger.info("... generating " + supplierRepo.findAll().size() + " suppliers in entities...");
-         //   logger.info(u.getUserName() + " " +u.getPassword()+ " is saved");
+            pickinglistRepository.saveAll(pickinglists);
+            stockRepository.saveAll(stocks);
+            movementRepository.saveAll(movements);
         };
     }
 }
